--- a/smacofBasics/smacofIntro.Rmd
+++ b/smacofBasics/smacofIntro.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
     | Smacof at 50: A Manual
-    | Part 1: Smacof Basics
+    | Part 1: Basics
 author: 
 - Jan de Leeuw - University of California Los Angeles
 date: '`r paste("Started February 21 2024, Version of",format(Sys.Date(),"%B %d, %Y"))`'
@@ -24,7 +24,6 @@ graphics: yes
 mainfont: Times New Roman
 fontsize: 12pt
 bibliography: ["mypubs.bib","total.bib"]
-abstract: TBD
 editor_options: 
   markdown: 
     wrap: 72
@@ -48,9 +47,33 @@ and smacofExamples.
 
 In *Multidimensional Scaling (MDS)* the data consists of information
 about the similarity or dissimilarity between pairs of objects selected
-from a finite set $\mathcal{O}=\{o_1,\cdots,o_n\}$.
+from a finite set $\mathcal{O}=\{o_1,\cdots,o_n\}$. The purpose of MDS,
+at least of the forms of MDS discussed in this manual, is to map
+the $o_i$ into elements $x_i$ of a metric space in such a way that 
+the pairwise distances between the $x_i$ mirror the information we have about the dissimilarities. This is admittedly vague and we'll make it more
+precise in a moment.
 
-In *metric MDS* we have numerical dissimilarity measures $\delta$ on 
+It is not our intention in these chapters to give an introduction to MDS
+and a complete overview of MDS models, techniques, algorithms, and
+applications. This has already been done admirably in
+@borg_groenen_05. We limit outselves to discussing the definitions, results, and notations necessary to understand the MDS techniques presented in this manual.
+
+## Euclidean MDS
+
+The MDS techniques discussed in this manual are *Euclidean*, by which we mean that we map the objects $o_i$ into elements $x_i$ of a p-dimensional vector space with metric
+
+
+### Weights
+
+## Metric, Non-metric, and Non-linear MDS
+
+## Square and Rectangular MDS
+
+## Alternating Least Squares
+
+## Majorization (or MM)
+
+In *metric MDS* we have a numerical dissimilarity measure $\delta$ on 
 a subset of $\mathcal{O}\times\mathcal{O}$ and we want to
 map the objects $o_i$ into $n$ points $x_i$ of some metric space in such
 a way that the distances between the points approximate the
@@ -64,8 +87,7 @@ $x_i$, with $i=1,\cdots,n$, such that
 \end{equation}
 (the symbol $:=$ is used for definitions). Note that *distance matrix completion* (@fang_oleary_12) is an example of metric MDS.
 
-Besides metric MDS there is also something called *non-metric MDS*. The terms is ambiguous and can mean either one of two things. One definition is that
-we do not have numerical information about the dissimilarities, but only
+Besides metric MDS there is also something called *non-metric MDS*. The term is ambiguous and can mean either one of two things. One definition is that we do not have numerical information about the dissimilarities, but only
 ordinal of nominal information. In the ordinal case we know that some dissimilarities are larger or smaller than others, in the nominal case
 that the objects are partitioned into groups and  within-group
 distances are smaller than between-group distances. An MDS analysis
@@ -79,7 +101,6 @@ such that
 (o_i,o_j)\preceq_\delta(o_k,o_l)\quad\Rightarrow\quad d_{ij}(X)\preceq_d d_{kl}(X).
 (\#eq:relations)
 \end{equation}
-For most non-metric MDS problems both $\preceq_\delta$ and $\prec_d$ are partial orders, but for nominal data they can be equivalence relations.
 
 The term "non-metric" is sometimes also used in the case in which we do have numerical dissimilarities $\delta_{ij}$, but the MDS problem is to find Euclidean distances which approximate some partially unknown function of the dissimilarities. The function should be member of a well-defined class of functions, for
 instance a third degree polynomial or a piecewise linear spline on a
@@ -104,10 +125,10 @@ only a single element, the identity transformation, in which case
 non-linear MDS is metric MDS.
 
 One way to solve this terminological dilemma is to simply define 
-MDS as finding an approximate solution $(X,\Delta)$ to
+MDS as finding an approximate solution $(X,\hat D)$ to
 \begin{subequations}
 \begin{align}
-\Delta&\in\mathfrak{D}(\#eq:gmdsdef1),\\
+\hat D&\in\mathfrak{D}(\#eq:gmdsdef1),\\
 X&\in\mathfrak{X}(\#eq:gmdsdef2),\\
 D(X)&=\Delta(\#eq:gmdsdef3),
 \end{align}
@@ -115,34 +136,6 @@ D(X)&=\Delta(\#eq:gmdsdef3),
 where $D(X)$ is the matrix of Euclidean distances and $\mathfrak{D}$ is the set of *transformed dissimilarities* in the non-linear case or the set of *quantified dissimilarities* in the non-metric case. We can then freely discuss
 metric MDS, linear MDS, non-linear MDS, and non-metric MDS as special cases,
 defined by different sets $\mathfrak{D}$.
-
-# Types of Data
-
-$I$ is a set of $n$ *row-objects*, $J$ is a set of $m$ *column-objects*.
-
-1. Numerical
-  + $\mathcal{RR}$ data, $\langle\mathcal{R}\times\mathcal{R}, \delta\rangle$, real-valued function $\delta$ on a subset of $\mathcal{R}\times\mathcal{R}$. 
-  + $\mathcal{CC}$ data, $\langle\mathcal{C}\times\mathcal{C}, \delta\rangle$, real-valued function $\delta$ on a subset of $\mathcal{C}\times\mathcal{C}$.
-  + $\mathcal{RC}$ data, $\langle\mathcal{R}\times\mathcal{C}, \delta\rangle$, real-valued function $\delta$ on a subset of $\mathcal{R}\times\mathcal{C}$.
-
-2. Ordinal 
-  + XX data, partial order on a subset of $X\times X$
-  + XY data, partial order $\leq$ on the $n\times m$-element set $X\times Y$
-
-3. Nominal
-  + XX data, equivalence relation on a subset of $X\times X$
-  + XY data, equivalence relation on a subset of $X\times Y$
-
-Conditional Data
-  + XX data, $n$ partial $\leq$ is the union of $n$ partial orders $\leq_i$ on the $n$ disjoint $n$-element sets $x_i\times X$ 
-  + XY data, the partial order $\leq$ is the union of $n$ partial orders $\leq_i$ on the $n$ disjoint $m$-element sets $x_i\times Y$
-
-Replicated Data
-
-As ordinal, but the partial orders are equivalence relations.
-
-
-
 
 
 # Loss Function
@@ -450,8 +443,11 @@ step in the second phase.
 
 # Smacof Notation and Terminology
 
-We discuss some standard MDS notation, first introduced in
-@deleeuw_C_77. This notation is useful for the second phase of the ALS
+We discuss some the MDS notation used in smacof, which was first introduced in @deleeuw_C_77 and @deleeuw_heiser_C_77. More
+detailed @deleeuw_heiser_C_80, @deleeuw_A_88b, @borg_groenen_05,
+@groenen_vandevelden_16
+
+This notation is useful for the second phase of the ALS
 algorithm, in which solve the metric MDS problem of we minimizing
 unnormalized $\sigma(X,\hat D)$ over $X$ for fixed $\hat D$. We will
 discuss the first ALS phase later in the paper.
@@ -618,148 +614,6 @@ $$
 \frac{\omega(\alpha)}{\eta^2(\alpha)}\leq\sigma(Y)
 $$
 
-# Properties of Smacof Loss
-
-## Derivatives
-
-The Euclidean distance function $d_{ij}$ from ... is not differentiable
-at configurations $X$ with $x_i=x_j$. If $d_{ij}(X)>0$ then 
-$$
-\mathcal{D}\sigma(X)=\frac{1}{d_{ij}(X)}A_{ij}X
-$$ 
-If $d_{ij}(X)=0$ then $$
-D_+d_{ij}(X,Y)=\lim_{\epsilon\downarrow 0}\frac{d_{ij}(X+\epsilon Y)-d_{ij}(X)}{\epsilon}=d_{ij}(Y)
-$$ which is non-linear in $Y$, showing non-differentiability.
-
-$$
-D_+\sigma(X,Y)=\text{tr}\ Y'(V-B(X))X+\sum\{w_{ij}\delta_{ij}d_{ij}(Y)\mid d_{ij}(X)=0\}
-$$ This form of the directional derivative is used by @deleeuw_A_84f to
-show that two independent necessary conditions for a local minimum are
-$(V-B(X))X=0$ and $d_{ij}(X)>0$ for all $(i,j)$ with
-$w_{ij}\delta_{ij}>0$. 
-
-### Gradient
-
-$$
-\mathcal{D}\sigma(X)=(V-B(X))X
-$$ 
-At a stationary point $B(X)X=VX$ or $V^+B(X)X=X$. Thus a necessary
-condition for a local minimum is that $V^+B(X)$ has at least $p$
-eigenvalues equal to one. @deleeuw_U_14b has shown that if
-$V^+B(X)\lesssim I$ then actually $X$ is a global minimizer of stress.
-
-$$
-\rho(X)=\sum w_{ij}\delta_{ij}(X)
-$$
-
-$$
-\nabla d_{ij}(X)=\begin{bmatrix}0\\
-\frac{x_i-x_j}{d_{ij}(X)}\\0\\-\frac{x_i-x_j}{d_{ij}(X)}\\0\end{bmatrix}
-$$
-
-$$
-\partial d_{ij}(X)=\left\{\begin{bmatrix}0\\
-y\\0\\-y\\0\end{bmatrix}\mid y'y\leq 1\right\}.
-$$
-
-### Hessian
-
-The results on the Hessian of stress are largely unpublished. So we
-summarize them here in this manual, so they'll be even more unpublished.
-
-$$
-H_{st}(X):=\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\left\{\frac{A_{ij}x_sx_t'A_{ij}}{d_{ij}^2(X)}\right\}
-$$
-
-$$
-H_{st}(X)=\sum   w_{ij}\frac{\delta_{ij}}{d_{ij}^3(X)}(x_{is}-x_{js})(x_{it}-x_{jt})A_{ij}
-$$ 
-$$
-\mathcal{D}_{st}\sigma(X)=\begin{cases}H_{st}(X)&\text{ if }s\not= t,\\
-V-B(X)+H_{st}&\text{ if }s= t.
-\end{cases}
-$$ 
-If $I_p$ is the identity matrix of order $p$, and $\otimes$ is the
-Kronecker product, then $$
-\mathcal{D}^2\sigma(X)=I_p\otimes(V - B(X))+ H(X)
-$$ $$
-\sum_{s=1}^p\sum_{t=1}^p y_s'H_{st}y_t=\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\left\{\frac{(\text{tr} \ Y'A_{ij}X)^2}{d_{ij}^2(X)}\right\}\leq\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\text{tr}\ Y'A_{ij}Y=\text{tr}\ Y'B(X)Y.
-$$ 
-Thus 
-$$
-0\lesssim H\lesssim I_p\otimes B(X),
-$$ 
-and 
-$$
-I_p\otimes (V-B(X))\lesssim\mathcal{D}^2\sigma(X)\lesssim I_p\otimes V
-$$ 
-At a local minimum of $\sigma$ 
-$$
-0\lesssim\mathcal{D}^2\sigma(X)\lesssim I_p\otimes V
-$$ 
-In comparing the lower bounds on $\mathcal{D}^2\sigma(X)$ in ... and
-... @deleeuw_U_14b shows that $V-B(X)\gtrsim 0$ is sufficient for a
-*global* minimum of stress (but far from necessary).
-
-Also $$
-\sum_{t=1}^p H_{st}y_t=\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\left\{\frac{\text{tr}\ Y'A_{ij}X }{d_{ij}^2(X)}\right\}A_{ij}x_s
-$$ If $Y=X$ then $H(X)y=(I_p\otimes B(X))x$ and thus
-$$\mathcal{D}^2\sigma(X)x=(I_p\otimes V)x.$$ In the unweighted case this
-means that $X$ is an eigenvector of $\mathcal{D}^2\sigma(X)$ with
-eigenvalue $n$. Inequalities ... show that this is actually the largest
-eigenvalue. Or $(I_p\otimes V)^+\mathcal{D}^2\sigma(X)\lesssim I$.
-
-If $Y=XT$ with $T$ anti-symmetric then $\text{tr}\ Y'A_{ij}X=0$ then
-thus $H(X)y=0$. Thus $$
-\sum_{t=1}^p\mathcal{D}_{st}\sigma(X)y_t=(V-B(X))y_t
-$$ which is zero if $\mathcal{D}\sigma(X)$ is zero. Thus at a stationary
-point of stress $\mathcal{D}^\sigma(X)$ has $\frac12p(p-1)$ zero
-eigenvalues.
-
-There are several ways to think of the Hessian. The simplest one
-(perhaps) is as an $np\times np$ symmetric matrix (corresponding to
-
-column-major R vector of length $\frac12 np(np+1)$). This is what we
-would use for a straightforward version of Newton-Raphson.
-
-It is more elegant, however, to think of $H$ as a symmetric super-matrix
-of order $p$, with as elements $n\times n$ matrices. And, for some
-purposes, such as the pseudo-confidence ellipsoids in @deleeuw_E_17q, as
-a super-matrix of order $n$ with as elements $p\times p$ matrices. Both
-the super-matrix interpretations lead to four-dimensional arrays, the
-first a $p\times p\times n\times n$ array, the second an
-$n\times n\times p\times p$ array. The different interpretations lead to
-different ways to store the Hessian in memory, and to different ways to
-retrieve its elements. Of course we can write routines to transform from
-one interpretation to another.
-
-## Lagrangian
-
-In our implementation of the smacof algorithm we minimize stress over
-configurations with $\eta(X)=1$, or, equivalently,
-$\sum w_{ij}d_{ij}^2(X)=1$. This means we do not look for $X$ with
-$\mathcal{D}\sigma(X)=(V-B(X))X=0$, but we look for solutions of $$
-(V-B(X))X-\lambda VX=0,\\
-\text{tr}\ X'VX= 1.
-$$ At the solution $$
-\lambda=1-\rho(X)
-$$ and $$
-X = \frac{\Gamma(X)}{\eta(\Gamma(X))}
-$$ Also it is necessary for a local minimum that $$
-\Gamma(X)=\rho(X)X
-$$ Because the Guttman transform is homogeneous of degree zero this
-implies $$
-\Gamma(\Gamma(X)=\Gamma(X),
-$$ so although $X$ is not a fixed point of the Guttman transform,
-$\Gamma(X)$ is.
-
-The second order necessary condition is that $$
-H(X)\gtrsim I_p\otimes (\rho(X)V - B(X))
-$$ is positive
-
-### Kuhn-Tucker Points
-
-bozo
 
 # Smacof Algorithm
 
