--- a/smacofHO/smacofHO.Rmd
+++ b/smacofHO/smacofHO.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
     | Smacof at 50: A Manual
-    | Part 8: Gifi with Rank Constraints Smacofified 
+    | Part 8: Homogeneity Analysis 
 author: 
 - Jan de Leeuw - University of California Los Angeles
 date: '`r paste("Started April 13 2024, Version of",format(Sys.Date(),"%B %d, %Y"))`'
@@ -45,64 +45,83 @@ and smacofExamples.
 
 # Introduction: Categorical Data
 
-In this chapter we shall analyze categorical data, with the following components.
+In this chapter we shall analyze categorical data structures, with the following components.
 
 * There are $m$ *variables*. 
 * Variable $j$ has $k_j>1$ *categories*.
 * There are $n$ *objects*.
-* Each object defines a *partial order* over the categories of each variable.
+* Each object defines a *partial order* over the categories of each variable. Make this the simple tree.
 
-Thus the data are the $n\times m$ partial orders $\lesssim_{ij}$.
+Introduce indicators
+
+Discuss: separation and compactness. categories as points or regions.
+circles, stars, voronoi regions
+
+Start with MSA and @deleeuw_R_69d,
+@deleeuw_R_04e, @deleeuw_U_03d
+
+Thus the actual data we collect are the $n\times m$ partial orders $\lesssim_{ij}$.
 
 We study minimization of the stress *loss function*
 \begin{equation}
-\sigma(X,Y_1,\cdots,Y_m):=\sum_{j=1}^m\sum_{i=1}^n\min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d(x_i,y_l^j))^2
+\sigma(X,Y_1,\cdots,Y_m):=\sum_{j=1}^m\sum_{i=1}^n\min_{\hat d_i^j\in\Delta_i^j}\sum_{l=1}^{k_j}w_{il}^j(\hat d_{il}^j-d_{il}(X,Y_j))^2
 (\#eq:snmu)
 \end{equation}
 over the $n\times p$ matrix of *object scores* $X$, the $k_j\times p$
-matrices of *category scores* $Y_j$, and the $n\times k_j$  *transformations* (or *optimal scalings*) $\Delta_j$. 
+matrices of *category scores* $Y_j$, and the $n\times k_j$  *transformations* (or *optimal scalings*) $\Delta_j$. We write
+$d_{il}(X,Y_j)$ for the distance between object $i$ and category
+$l$ of variable $j$. Note that for each variable $j$ there are different matrices of category scores $Y_j$, but there is only a single matrix of object scores $X$. 
 
-The $w_{il}^j$ in \@ref(eq:snmu)
+The $w_{il}^j$ in definition \@ref(eq:snmu)
 are non-negative *weights*. Formulas and derivations simplify if the data are *row-weighted*, by which we mean that $w_{il}^j=w_i^j$. They simplify 
 even more if weights are *constant*, i.e. if all non-zero weights
 are equal to one.
 
 The transformations in \@ref(eq:snmu)
 are *row-conditional*, in the sense that for each $i$ a vector 
-$\hat d_i^j$ of length $k_j$ is selected from the cone of admissible transformations $\Delta_i^j$. Each row has its own cone. Note that for each variable $j$ there are different matrices of category scores $Y_j$, but there is only a single matrix of object scores $X$. Also note that index $j$, for variables, is sometimes used as a subscript and sometimes as a superscript, depending on what looks best.
+$\hat d_i^j$ of length $k_j$ is selected by the technique
+from a cone of admissible transformations $\Delta_i^j$. Each row has its own cone. 
 
 We need a few words to discuss the meaning of the word "model" in this
 context, since it is used frequently in data analysis. The
-model corresponding with a loss function is the set of parameter
-values for which loss attains its global minimum (usually zero).
+model corresponding with a loss function $\sigma$ is the set of parameter
+values for which $\sigma$ attains its global minimum (usually zero).
 Thus a model is a system of equations and/or inequalities.
-In the case of loss function \ref(eq:snmu) the model is 
-that the $d(x_,y_{il}^j)$ with $w_{il}^j>0$ satisfy the partial order $\lesssim_{ij}$.
+In the case of loss function \@ref(eq:snmu) the model is 
+that the $d_{il}(X,Y_j)$ with $w_{il}^j>0$ satisfy the partial order $\lesssim_{ij}$. Define
+\begin{equation}
+\epsilon^j_{il\nu}:=
+\begin{cases}
+1&\text{ if we require }\hat d^j_{il}\lesssim\hat d^j_{i\nu},\\
+0&\text{ otherwise}
+\end{cases}
+\end{equation}
+Then the model is the system of inequalities
+\begin{equation}
+w_{il}^jw_{i\nu}^j\epsilon^j_{il\nu}(d_{il}(X,Y_j)-d_{i\nu}(X,Y_j))\geq 0
+(\#eq:model)
+\end{equation}
 
-$$
-w_{il}^jw_{i\nu}^j\epsilon^j_{il\nu}(d^j_{il}(X,Y)-d^j_{i\nu}(X,Y))\geq 0
-$$
-$$
-w_{il}^jw_{i\nu}^j\epsilon^j_{il\nu}(-2x_{i}'(y^j_l-y^j_\nu)+\|y^j_l\|^2-\|y^j_\nu\|^2)\geq 0
-$$
-If the cones $\Delta_i^j$ contain the zero vector, then the global minimum of \@ref(eq:snmu) is clearly equal to zero. Collapsing all $x_i$ and all $y_l^j$ into a single point makes all distances zero, and thus makes stress zero. There is also zero stress if we collapse all $x_i$ into
-one point and all $y_l^j$ into another points. There are more subtle
-trivial solutions, however.
-Suppose the cones $\Delta_i^j$ contain the set of all constant vectors (or all non-negative constant vectors). Collapse all $x_i$ into a single point, and place all $y_l^j$ for variable $j$ on a sphere around this point. There can be different radii for different variables. This makes all $d(x_i,y_l^j)$ equal to the radius of the sphere and thus makes stress zero. 
+If the cones $\Delta_i^j$ contain the zero vector, then the global minimum of loss function \@ref(eq:snmu) is clearly equal to zero. Collapsing all $x_i$ and all $y_l^j$ into a single point makes all distances zero, and thus makes stress zero. There is also zero stress if we collapse all $x_i$ into one point and all $y_l^j$ into another point. These solutions are *trivial* in the sense that, although they satisfy the model, they are
+independent of the data and consequently not informative. There are also more subtle
+trivial solutions.
+Suppose the cones $\Delta_i^j$ contain the set of all non-negative constant vectors. Collapse all $x_i$ into a single point, and place all $y_l^j$ for variable $j$ on a sphere around the point $x_i$. There can be different radii for different variables. This makes all $d(x_i,y_l^j)$ equal to the radius of the sphere and thus makes stress zero. 
 
-It follows that we cannot define the purpose of our algorithms as finding the minimum of \@ref(eq:snmu) over all $X$ and $Y_j$. Some constraints on the optimization problems are needed to prevent these trivial or degenerate solutions.
+
 
 In the context of non-metric unfolding there has been much work
 on avoiding trivial and degenerate solutions. This started as soon as
 Kruskal-Guttman-type iterative MDS techniques using data transformation became available. Early contributions were @roskam_68 and @kruskal_carroll_69. For valuable summaries of more recent work, mostly by Willem Heiser and his students, we refer to the dissertations of @vandeun_05 and @busing_10.
+
+It follows from the existence of these trivial solutions that we cannot define the purpose of our algorithms as finding the minimum of \@ref(eq:snmu) over all $\hat D_j$, $X$ and $Y_j$. Some constraints on the optimization problems are needed to prevent these trivial or degenerate solutions. 
 
 # Homogeneity Analysis{#hom}
 
 The *Gifi System* (@gifi_B_90, @michailidis_deleeuw_A_98, @deleeuw_mair_A_09a) implements non-linear or non-metric versions of the classical linear multivariate analysis techniques (regression, analysis of variance, canonical analysis, discriminant analysis, principal component analysis). The non-linear versions are introduced as special cases of *Homogeneity Analysis*, which is better known as *Multiple Correspondence Analysis*.
 
 In this section we present homogeneity analysis as a technique for
-minimizing the loss function \@ref(eq:snmu) when the data are $n\times k_j$ *indicator matrices* $G_j$, with $j=1,\cdots,M$. This is a non-standard presentation, because usually homogeneity analysis is related to principal component analysis, and not to multidimensional scaling
-(see, for example, @deleeuw_C_14 or @deleeuw_C_23).
+minimizing the loss function \@ref(eq:snmu) when the data are $n\times k_j$ *indicator matrices* $G_j$, with $j=1,\cdots,m$. This is a non-standard presentation, because usually homogeneity analysis is related to principal component analysis, and not to multidimensional scaling
+(see, for example, @deleeuw_C_14 or @deleeuw_C_23). @hoffman_deleeuw_A_92
 
 In homogeneity analysis the data are (or are coded as) $m$ *indicator matrices* $G_j$, where $G_j$ is $n\times k_j$.
 Indicator matrices are binary matrices, with rows that add up to one or to zero. 
@@ -276,15 +295,17 @@ The smacofHO technique solves the closely related problem in which we do not req
 \begin{subequations}
 \begin{equation}
 \sum_{l=1}^{k_j}g^j_{il}\hat d^j_{il}=0
+(\#eq:homcons)
 \end{equation}
 for all $i$ and $j$, but we impose the weaker condition that for all $i$ and $j$
 \begin{equation}
 \sum_{l=1}^{k_j}g^j_{il}\hat d^j_{il}\leq\hat d^j_{i\nu}
+(\#eq:hocons)
 \end{equation}
 \end{subequations}
 for all $\nu=1,\cdots,k_j$.
 In homogeneity analysis the geometric interpretation of loss is that we
-want objects to coincide with all categories they score in. The geometric interpretation of loss function ... is that we want 
+want objects to coincide with all categories they score in. The geometric interpretation of loss function \@ref(eq:snmu) is that we want 
 objects to be closer to the categories they score in than to the categories
 they do not score in. 
 
@@ -292,27 +313,25 @@ This can be formalized using the notion of *Voronoi regions*. The Voronoi region
 category $l$ of variable $j$ is the polyhedral convex set of all points of $\mathbb{R}^p$ closer to category $l$ than to any other category of variable $j$. The plot of the the $k_j$ categories of variable $j$ defines $k_j$ Voronoi regions that
 partition $\mathbb{R}^p$. For a wealth of information about Voronoi regions we refer to
 
-Loss function ... with $\Delta$ defined by ... vanishes if for each variable all $x_i$ are in the Voronoi regions of the categories they score in. This condition implies, by the way, that the interiors of the $k_j$ convex hulls of the $x_i$ in a given category are disjoint, and the point clouds can consequently be weakly separated by hyperplanes. Since the category points themselves are in their own Voronoi region the convex hulls of the stars are also disjoint.
+Loss function \@ref(eq:snmu) with $\Delta$ defined by constraint\@ref(eq:hocons) vanishes if for each variable all $x_i$ are in the Voronoi regions of the categories they score in. This condition implies, by the way, that the interiors of the $k_j$ convex hulls of the $x_i$ in a given category are disjoint, and the point clouds can consequently be weakly separated by hyperplanes. Since the category points themselves are in their own Voronoi region the convex hulls of the stars are also disjoint.
 
-The general majorization theory for MDS with restrictions (@deleeuw_heiser_C_80)
-calls for updates
-in two steps. In the first step we compute the Guttman transform of the current configuration, and in the second step we project the Guttman transform on the
-set of constrained configurations.
 
-Configuration updates are alternated with updates of the $\hat D_j$. Initial: homals.
 
-Minimizing loss ... over the $\hat d_i^j$ is a monotone regression problem for a simple tree
-order. This is easily solved by using Kruskal's primary approach to ties
-(@kruskal_64a, @kruskal_64b, @deleeuw_A_77).
+The initial configuration for the iterations is computed using homogeneity analysis. In each iteration configuration updates are alternated with updates of the $\hat D_j$. 
+The general majorization theory for MDS with restrictions (@deleeuw_heiser_C_80) calls for configuration updates
+in two steps. In the first step we compute the Guttman transform of the current configuration, and in the second step we project the Guttman transform on the set of constrained configurations.
+
+Minimizing loss \@ref(eq:snmu)  over the $\hat d_i^j$ is a monotone regression problem for a simple tree order. This is easily solved by using Kruskal's primary approach to ties (@kruskal_64a, @kruskal_64b, @deleeuw_A_77).
 
 ## The Guttman Transform
 
 The smacof iterations, or Guttman transforms, more or less ignore the fact that we are dealing with a rectangular matrix and use the weights to transform the problem into a symmetric one (as in @heiser_deleeuw_A_79).
 
 The loss function is
-$$
+\begin{equation}
 \sigma(Z_1,\cdots,Z_m)=\sum_{j=1}^m\sum_{i=1}^{n_j}\sum_{k=1}^{n_j}w_{ik}^j(\hat d_{ik}^j-d_{ik}(Z_j))^2,
-$$
+(\#eq:fullloss)
+\end{equation}
 with $n_j:=n+k_j$ and with $Z_j$ the $n_j\times p$ matrices that stack $X$ on top of
 $Y_j$. The $w_{ik}^j$ are zero for the diagonal $n\times n$ and the diagonal
 $k_j\times k_j$ block.
@@ -335,7 +354,7 @@ R_B&-B\\
 Since we have to solve this system for each variable separately we forget about the index $j$ here. In 
 \@ref(eq:guttman) $R_W$ and $C_W$ are the diagonal matrices with row and column sums of $-W$, while $R_B$ and $C_B$ are diagonal matrices with the row and columns sums of the $n\times k_j$ matrix $B$, which has elements
 \begin{equation}
-b_{il}=w_{il}\frac{\hat d_{il}}{d(x_i,y_l)}.
+b_{il}=w_{il}\frac{\hat d_{il}}{d_{il}(X,Y_l)}.
 (\#eq:bdef)
 \end{equation}
 Matrices $X$ and $Y$ are the two parts of the current $Z$ that we are updating,
@@ -367,8 +386,7 @@ As in homogeneity analysis we hope that $k_\star$
 is not to big, and we avoid generalized inverses of very large and very
 sparse matrices.
 
-
-## The Guttman Projection
+## The smacof Projection
 
 After computing the Guttman transforms $\tilde X_j$ and $\tilde Y_j$ we have to project them on the set of constrained configurations. 
 
@@ -422,24 +440,71 @@ $$
 \{Y_j'C_j-(X-\tilde X_j)'W_j\}'A_j=C_jQ_jA_jA_j'
 $$
 
+### Centroid Constraints on Y
+
+If we require that $Y_j=(G_j'R_jG_j)^{-1}G_j'R_jX$ then this effectively eliminates the $Y_j$ as variables from the optimization problem and we only have to optimize over $X$. We must minimize
+\begin{multline}
+\sum_{j=1}^m\text{tr}\ (X-\tilde X_j)'R_j(X-\tilde X_j) -
+\text{tr}\ (X-\tilde X_j)'W_j(H_jX-\tilde Y_j)+\\
+\text{tr}\ (H_jX-\tilde Y_j)'C_j(H_jX-\tilde Y_j)
+\end{multline}
+Expanding
+\begin{multline}
+2\ X'R_\star X-2\ \text{tr}\ X'\sum_{j=1}^mR_j\tilde X_j-2\ \text{tr}\ X'\{\sum_{j=1}^mW_jH_j\}X + 2\text{tr}\ X'\sum_{j=1}^mW_j\tilde Y_j+\\
+\text{tr}\ X'\{\sum_{j=1}^mH_j'C_jH_j\}X-2\text{tr}\ X'\{\sum_{j=1}^mH_j'C_j\tilde Y_j\}
+\end{multline}
+
+Substituting $Y_j=H_jX$ with $H_j:=(G_j'R_jG_j)^{-1}G_j'R_j$ in .. and simplifying gives
+the stationary equations $P_\star X= Q_\star$ with
+\begin{subequations}
+\begin{align}
+P_\star&:=\sum_{j=1}^m\{R_j-H_j'W_j'-W_jH_j+H_j'C_jH_j\},\\
+Q_\star&:=\sum_{j=1}^m\{(R_j-H_j'W_j')\tilde X_j-(W_j-H_j'C_j)\tilde Y_j\}.
+\end{align}
+\end{subequations}
+Thus the unnormalized solution for the object scores is $X=P^+_\star Q_\star$.
+
+We want to avoid inversion of the matrix $P_\star$, which has order $n$. In fact we do not want to compute and store $P_\star$ at all. huppel
+
+We avoid the inversion by using majorization. Suppose $\mu$ is such that $P_\star\lesssim\mu R_\star$ in  the Loewner sense. We would typically take $\mu$ as the largest eigenvalue of $R_\star^{-1}P_\star$.
+
+Define 
+$$
+\omega(X):=\text{tr}\ X'P_\star X-2\ \text{tr}\ X'Q_\star
+$$
+Then, reculer pour mieux sauter, writing $\overline{X}$ for the current best 
+$X$,
+$$
+\omega(X)=\text{tr}\ (\overline X+(X-\overline X))'P_\star(\overline X+(X-\overline X))-2\ \text{tr}\ (\overline X+(X-\overline X))'Q_\star
+$$
+Now
+\begin{multline}
+\omega(X)\leq\omega(\overline X)+
+\mu\text{tr}\ (X-\overline X)'R_\star(X-\overline X)-2\ \text{tr}\ (X-\overline X)'(Q_\star-P_\star\overline X)
+\end{multline}
+The stationary equations in the unnormalized case have solution
+$$
+X=\overline X+\mu^{-1}R_\star^{-1}(Q_\star-P_\star\overline X)
+$$
+If we require the normalization $X'R_\star X=I$ then we must solve the Procrustus problem
+$$
+(\mu R_\star-P_\star)\overline X - Q_\star=R_\star X\Lambda
+$$
+with $\Lambda$ a symmetric matrix of Lagrange multipliers.
+
 
 ### Normalization of X
 
-Besides $X_j=X$ We can choose to impose the *weak normalization constraint* $\text{tr}\ X'R_\star X=1$ or the *strong normalization constraint* $X'R_\star X=I$. In both cases the stationary
-equation \@ref(eq:stateq1) remains the same, while \@ref(eq:stateq1) becomes
+Besides $X_j=X$ we can also optionally require the normalization constraint $X'R_\star X=I$. In both cases the stationary equation \@ref(eq:stateq1) remains the same, while \@ref(eq:stateq1) becomes
 $$
-R_\star X\Lambda=P,
+R_\star X\Lambda=P_\star,
 $$
 with
 $$
-P:=\sum_{j=1}^m\left\{R_j\tilde X_j-W_j(Y_j-\tilde Y_j)\right\}
+P_\star:=\sum_{j=1}^m\left\{R_j\tilde X_j-W_j(Y_j-\tilde Y_j)\right\}
 $$
-and with $\Lambda$ a matrix of Lagrange multipliers. For weak normalization $\Lambda$
-is scalar, and
-$$
-X=\frac{1}{\sqrt{\text{tr}\ P'R_\star^{-1}P}}R_\star^{-1}P
-$$
-For strong normalization $\Lambda$ is symmetric. Using the symmetric square root, $\Lambda=(P'R_\star^{-1}P)^\frac12$ and thus 
+and with $\Lambda$ a symmetric matrix of Lagrange multipliers. 
+Using the symmetric square root, $\Lambda=(P'R_\star^{-1}P)^\frac12$ and thus 
 $$
 X=R_\star^{-1}P(P'R_\star^{-1}P)^{-\frac12}.
 $$
@@ -627,7 +692,7 @@ hcetho <- smacofHO(cetacea, verbose = FALSE, itmax = 10000)
 
 Stress is `r hcetho$stress` after `r hcetho$itel` iterations.
 
-```{r}
+```{r cetaplot}
 smacofObjectsPlotHO(hcethom, cex = .5)
 hcethompre <- smacofPredictionTable(hcethom)
 print(colSums(hcethompre, na.rm = TRUE))
@@ -635,7 +700,8 @@ smacofObjectsPlotHO(hcetho, cex = .5)
 hcethopre <- smacofPredictionTable(hcetho)
 print(colSums(hcethopre, na.rm = TRUE))
 ```
-```{r}
+
+```{r cetanorm}
 hcetno <- smacofHO(cetacea, verbose = FALSE, xnorm = 2, itmax = 10000)
 smacofObjectsPlotHO(hcetno, cex = .5)
 hcetnopre <- smacofPredictionTable(hcetno)
@@ -645,9 +711,10 @@ print(sum(hcetnopre, na.rm = TRUE))
 
 ## Senate
 
-```{r}
+```{r senate data}
 data(senate, package = "homals")
 ```
+
 ```{r senatecomp, cache = TRUE}
 hhom <- smacofHomogeneityHO(senate[, 2:21])
 hho <- smacofHO(senate[, 2:21], verbose = FALSE, itmax = 10000)
